--- a/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
@@ -17,4 +17,4 @@ spec:
         mode: Terminate
         certificateRefs:
           - kind: Secret
-            name: cloudflare-tls
+            name: external-cloudflare-tls
