--- a/platform/automation/k8s/n8n/internal-httproute.yaml
+++ b/platform/automation/k8s/n8n/internal-httproute.yaml
@@ -10,6 +10,8 @@ spec:
   parentRefs:
     - name: homelab-internal-gateway
       namespace: kube-system
+  hostnames:
+    - n8n.homelab.internal
   rules:
     - matches:
         - path:
