--- a/platform/observability/graylog/graylog.conf
+++ b/platform/observability/graylog/graylog.conf
@@ -34,6 +34,8 @@ inputbuffer_wait_strategy = blocking
 
 # Enable the message journal.
 message_journal_enabled = true
+message_journal_disk_space_check_interval = 0
+message_journal_max_size = 1gb
 
 # The directory which will be used to store the message journal. The directory must be exclusively used by Graylog and
 # must not contain any other files than the ones created by Graylog itself.
@@ -82,7 +84,7 @@ prometheus_exporter_enabled = true
 prometheus_exporter_bind_address = 127.0.0.1:9833
 
 #Email Settings
-transport_email_enabled = true
+transport_email_enabled = false
 transport_email_hostname = outbound.mailhop.org
 transport_email_port = 587
 transport_email_use_auth = true
