--- a/kubernetes/charts/homelab-gateway/templates/internal-cf-certificate.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/internal-cf-certificate.yaml
@@ -2,14 +2,15 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: external-certificate
+  name: internal-cf-certificate
   namespace: kube-system
 spec:
-  secretName: external-cloudflare-dns-key
+  secretName: internal-cloudflare-dns-key
   duration: 2160h
   renewBefore: 360h
   dnsNames:
-    - {{ .Values.external.domain }}
+    - homelab.internal
+    - "*.homelab.internal"
   issuerRef:
     name: cloudflare-dns-issuer
     kind: ClusterIssuer
