--- a/platform/ai/k8s/llm-providers/bedrock/secrets-generator.yaml
+++ b/platform/ai/k8s/llm-providers/bedrock/secrets-generator.yaml
@@ -8,5 +8,4 @@ metadata:
       exec:
         path: ksops
 files:
-  - llm-providers/openai/secret.enc.yaml
-  - llm-providers/bedrock/secret.enc.yaml
+  - secret.enc.yaml
