--- a/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
+++ b/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
@@ -1,24 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:GiM=,iv:2luCaVzuvzmnu4IMviqqK2ZQCwHgGQOxt74P3Ml0ftw=,tag:VTr0lawj9HnBmITQoYSjdQ==,type:str]
-kind: ENC[AES256_GCM,data:q7oFj+Ns,iv:RPNgNisnK0sCnD1xaHSynull/ilhimy5vRQxUfCLGOw=,tag:cE7vAD/+3ygwAM1eV8PSog==,type:str]
+apiVersion: ENC[AES256_GCM,data:Ru4=,iv:4q6/yqALnhI0Q8aOQNW79EFeH9pbok0ZE16XPNMERYM=,tag:YbOh/HwyftPMU8IP3PXE0w==,type:str]
+kind: ENC[AES256_GCM,data:ikx7fWO4,iv:+J7HjmkFSNdbhIeFLOqKLxH8sODNATUpaazHbS6QqoE=,tag:M24IWjjjzaYqiNkFIMzXaw==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:WtveoaZtUupDKqqAirdwlo3yZE1d,iv:Nchu/MDWsinVNIoTH3LGHvbeD1HEI+E80QbKVzNd4ts=,tag:RVcoAyTgz/aPxbo8W33xrQ==,type:str]
-    namespace: ENC[AES256_GCM,data:SVQ=,iv:RnMdnaual0BaxtgfUobQeUuX7Siut7bThlhA6W+6WZE=,tag:JX/w1Xiw9rUg+GE1b+cG2A==,type:str]
-type: ENC[AES256_GCM,data:oUvWiDKA,iv:bvj8abT9xlVxMxsKZpFhFC8qOgm1/u1RuRVNMJnZ00c=,tag:hvcppNa78QAwSiVjWSG0oQ==,type:str]
+    name: ENC[AES256_GCM,data:r8hY9zQ0jFX1krqAmoI/ZZjJ+Bw7,iv:mgS7dKDNpEjlwhk5aJwnbx9vLbYksycA1TUjlYAIKRY=,tag:MR3TzDuuatRVtQ34HR085w==,type:str]
+    namespace: ENC[AES256_GCM,data:i9k=,iv:+tTpMaYFwXYkNIXJI0qBVeD7i3JYpstSKkAPbPrjdWU=,tag:ieDfEbbiZ+EtCIJlb3a5sA==,type:str]
+type: ENC[AES256_GCM,data:ItVXlv8Y,iv:qkSKuLJTcYCvYlL0Pdtr0QaYDpt0Xstpcgpbr8v5ggM=,tag:ZCJk08UGNgDIkpHlvcvLng==,type:str]
 stringData:
-    apiKey: ENC[AES256_GCM,data:ePd8caVBxdgzyj6itI+fDEiweusl6K/f8hCk8WJMHuqpjXq5djHV9hMOWwmjO3yx68yGgpJ39JRmN9BcXCq2jU7IEyWtgTJkmt279Z/c40O0SW46NqyOldJgLCwUUejQz4+oJ/2J5RuSnN6rjrgOhvNOkdeUkraZ734ySkihjVS/cczpgLafDjUtS2EsS1GhzaNa/nqPG2lM20yu/jn/THgSO0E=,iv:gVA3VOPz+noG6CigXuKwmjiDKEzhzbOHtv2notw0CXs=,tag:S3dCNC61UU2uU86oweLcgA==,type:str]
+    apiKey: ENC[AES256_GCM,data:ZDZs7/mTZsOEhJNFFN/svLle+ZdNwZjVZ5iB6oW2nyHLmnj+vXDs3EVe/TrgQsVXBZP3+2XsihhCCKjmelfc4q59hXWSwRlaBIjLBsXQXI9uPB5N3GgkgLvus8o8QFsby5OHTyyqDOkVvwkYUV/877jIPcUvHsIMZN/GQyWbudNC7HcmWw+K7BXZyPnqyMx/PV//JWePccvnPH2QXoURygqscx4=,iv:2hYx5GZwxfWMXuOT8co4H4JzBG51bVBo7hiMFKeLn5g=,tag:oIA90W031hfpFGmeLstX6Q==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-04-17T17:54:40Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFJ4yXrXhHmKmR5g6eYszdMAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMmoFU3BWauDw9RtM6AgEQgDsoGhpnZO/QVTxbdJyfJWDLjOnbBA2cNNTqOd+OoBobKTzuGcMgDZ/LG3kfF03QepQykegqzJmINAbRQQ==
+          created_at: "2025-07-25T20:01:05Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE8diCNDuaXfMRo5Nlp89+FAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM9m/Du/qSncWQiEG+AgEQgDsiDGVSaTl2onGNx8+3l+1TLB20vMQvh4VoS2z/J0i6Un3sj8FKrrZvWQjQgDb0xXqav48l+kKP+iUTbw==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-04-17T17:54:40Z"
-    mac: ENC[AES256_GCM,data:5HKComKj4fyMrDzHgEQDQUfQjksDBnpyHZVM8ksQEANNmJ0Uv0wd3rsQjpV65TPgn1Pjo1DMo4Eqdf81/JBLffMAM4jDA8WrcoEDcP1ZsW2lU8FGHYIzwxrlUAiNqF6vJoLrWykLX/yHo83+AxFdAylAN0fjKpqbxmGhlb3yrY0=,iv:Hxu/FjsQtGocgigv7KnuMqCOYKmiFoaTHTxTmZ7AZQY=,tag:i9+u0OGBgCcVUhQV7qtu7w==,type:str]
+    lastmodified: "2025-07-25T20:01:06Z"
+    mac: ENC[AES256_GCM,data:asNvOkxqtCQ4ptytpCZQtYvdEb+AYEADoNLkvNE2SWDR1SZheCpP4Uk3g3UHN0aELN2Xi7j2aES0F4KNYTDchOqyspovgFjW+gpMoELsinIL8htrfEh7h8mJmqdCFf0aDFEl8Tl0lnbl/N18vGslMOrKB5EcMDTdbgBan6HvgMw=,iv:KNxmKl7Xe9plUy1AMf8j2wXjhvMXnSZlExab1MFHLw8=,tag:D8o/j/9xF87Sdrjw1gx3BA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
-
