--- a/tf_modules/talos_cluster/patches/logging.yaml
+++ b/tf_modules/talos_cluster/patches/logging.yaml
@@ -2,7 +2,7 @@
 machine:
   logging:
     destinations:
-      - endpoint: "udp://127.0.0.1:6051/"
+      - endpoint: "udp://${log_destination}/"
         format: "json_lines"
         extraTags:
           server: pve2
