--- a/kubernetes/apps/security/cert-manager/cloudflare-issuer.yaml
+++ b/kubernetes/apps/security/cert-manager/cloudflare-issuer.yaml
@@ -6,14 +6,14 @@ metadata:
   namespace: cert-manager
 spec:
   acme:
-    email: $(EMAIL)
+    email: ${EMAIL}
     server: https://acme-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       name: cloudflare-dns-key
     solvers:
       - dns01:
           cloudflare:
-            email: $(EMAIL)
+            email: ${EMAIL}
             apiTokenSecretRef:
               name: cloudflare-token-secret
-              key: CLOUDFARE_API_TOKEN
+              key: CLOUDFLARE_API_TOKEN
