--- a/platform/management/paperless/kustomization.yaml
+++ b/platform/management/paperless/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: management
 helmCharts:
-  - name:
+  - name: paperless-ngx
     chart: paperless-ngx
     repo: https://charts.gabe565.com
     version: 0.22.0
@@ -14,3 +14,6 @@ helmCharts:
         PAPERLESS_URL: https://document.homelab.internal
         # Required in order to import signed documents
         PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
+  - name: paperless-ai
+    chart: paperless-ai
+    inlineVales: {}
