--- a/platform/ai/k8s/gateway.yaml
+++ b/platform/ai/k8s/gateway.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     external-dns.alpha.kubernetes.io/hostname: ai.homelab.internal
 spec:
-  gatewayClassName: envoy-gateway-class
+  gatewayClassName: agentgateway
   listeners:
   - name: http
     protocol: HTTP
