--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -8,8 +8,8 @@ metadata:
     external-dns.alpha.kubernetes.io/hostname: "ollama.homelab.internal"
 spec:
   parentRefs:
-  - name: homelab-internal-gateway
-    namespace: kube-system
+  - name: ai-gateway
+    namespace: ai
   hostnames:
     - "ollama.homelab.internal"
   rules:
