--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -2,7 +2,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ollama-http-route
+  name: ollama
   namespace: ai
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "ollama.homelab.internal"
