--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -3,12 +3,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ollama-pvc.yaml
+  - backend.yaml
   - ollama-httproute.yaml
 helmCharts:
   - name: ollama
     releaseName: ollama
     repo: https://otwld.github.io/ollama-helm/
-    version: 1.21.0
+    version: 1.31.0
     namespace: ai
     valuesInline:
       ollama:
