use ai gateway for self hosted llm

--- a/kubernetes/charts/homelab-gateway/values.yaml
+++ b/kubernetes/charts/homelab-gateway/values.yaml
@@ -7,7 +7,8 @@ kgateway-crds:
 kgateway:
   agentgateway:
     enabled: true
-
+  inferenceExtension:
+    enabled: true
   controller:
     image:
       pullPolicy: Always
