--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -17,8 +17,8 @@ spec:
         - type: URLRewrite
           urlRewrite:
             path:
-              type: ReplaceFullPath
-              replaceFullPath: /
+              type: ReplacePrefixMatch
+              replacePrefixMatch: /
       backendRefs:
         - group: gateway.kgateway.dev
           kind: Backend
