--- a/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/ollama-httproute.yaml
@@ -2,21 +2,24 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: ollama-http-route
+  name: ollama
   namespace: ai
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: "ollama.homelab.internal"
 spec:
   parentRefs:
-  - name: homelab-internal-gateway
-    namespace: kube-system
-  hostnames:
-    - "ollama.homelab.internal"
+    - name: ai-gateway
+      namespace: ai
   rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: "/"
-    backendRefs:
-    - name: ollama
-      port: 11434
+    - matches:
+        - path:
+            type: PathPrefix
+            value: /ollama
+      filters:
+        - type: URLRewrite
+          urlRewrite:
+            path:
+              type: ReplacePrefixMatch
+              replacePrefixMatch: /
+      backendRefs:
+        - group: gateway.kgateway.dev
+          kind: Backend
+          name: ollama
