--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - storage
   - llm-providers
   - integrations
+  - ui-http-route.yaml
 helmCharts:
   - name: kagent-crds
     releaseName: kagent-crds
