--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ollama-pvc.yaml
   - backend.yaml
   - ollama-httproute.yaml
+  - models
 helmCharts:
   - name: ollama
     releaseName: ollama
