--- a/platform/ai/k8s/llm-providers/ollama/models/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/models/kustomization.yaml
@@ -2,8 +2,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - backend.yaml
-  - models
-
-generators:
-  - secrets-generator.yaml
+  - nomic-embed-text.yaml
