save kagent configuration

--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -20,6 +20,4 @@ helmCharts:
     namespace: ai
     valuesInline:
       providers:
-        default: openAI
-        openAI:
-          apiKey: ${OPENAI_API_KEY}
+        default: anthropic
