--- a/platform/ai/k8s/llm-providers/openai/models/gpt-4.5.yaml
+++ b/platform/ai/k8s/llm-providers/openai/models/gpt-4.5.yaml
@@ -3,6 +3,7 @@ apiVersion: kagent.dev/v1alpha1
 kind: ModelConfig
 metadata:
   name: gpt-4.5
+  namespace: ai
 spec:
   provider: OpenAI
   model: gpt-4.5
