--- a/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/ollama/kustomization.yaml
@@ -43,6 +43,9 @@ helmCharts:
           cpu: "2"
           memory: "12Gi"
           nvidia.com/gpu: 1
+      podAnnotations:
+        kubernetes.io/egress-bandwidth: "500M"
+        kubernetes.io/ingress-bandwidth: "500M"
       podSecurityContext:
         fsGroupChangePolicy: Always
         fsGroup: 0
