--- a/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
+++ b/platform/ai/k8s/llm-providers/openai/secret.enc.yaml
@@ -1,23 +1,23 @@
-apiVersion: ENC[AES256_GCM,data:Ru4=,iv:4q6/yqALnhI0Q8aOQNW79EFeH9pbok0ZE16XPNMERYM=,tag:YbOh/HwyftPMU8IP3PXE0w==,type:str]
-kind: ENC[AES256_GCM,data:ikx7fWO4,iv:+J7HjmkFSNdbhIeFLOqKLxH8sODNATUpaazHbS6QqoE=,tag:M24IWjjjzaYqiNkFIMzXaw==,type:str]
+apiVersion: ENC[AES256_GCM,data:C2c=,iv:UEIQNkzTcftTbfYe4FIF9PP8mCmWY2Y8LlfIaG5mqLo=,tag:aqW4YZevtdjGalIdp/XjZQ==,type:str]
+kind: ENC[AES256_GCM,data:xEKTN5I8,iv:Rk9XX0I7V32nkD+BD5nn7eJCXuvH9IrMXa5z0b5LTYA=,tag:pWGeRpiNkBEO3uO3YpKkiA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:r8hY9zQ0jFX1krqAmoI/ZZjJ+Bw7,iv:mgS7dKDNpEjlwhk5aJwnbx9vLbYksycA1TUjlYAIKRY=,tag:MR3TzDuuatRVtQ34HR085w==,type:str]
-    namespace: ENC[AES256_GCM,data:i9k=,iv:+tTpMaYFwXYkNIXJI0qBVeD7i3JYpstSKkAPbPrjdWU=,tag:ieDfEbbiZ+EtCIJlb3a5sA==,type:str]
-type: ENC[AES256_GCM,data:ItVXlv8Y,iv:qkSKuLJTcYCvYlL0Pdtr0QaYDpt0Xstpcgpbr8v5ggM=,tag:ZCJk08UGNgDIkpHlvcvLng==,type:str]
+    name: ENC[AES256_GCM,data:qxB3ayZxtWPFsf15k7xseIeq82td,iv:L8rszmFp+MmnxOpyNg6XhpGapJ/i7PJBNbOPVXMUq5E=,tag:KAqyslCHkZupLdqmi8kIvw==,type:str]
+    namespace: ENC[AES256_GCM,data:vXE=,iv:KsWC6NPXw/G9iH6EdVkXaDCY6e8AKjNQ/LEdz8QAoIk=,tag:B72lZdjH4BixppqPNf12tQ==,type:str]
+type: ENC[AES256_GCM,data:GNA43d4M,iv:KTUDyQI8B2zEW5Clz0tz7c8zVELbf/dd6aoUDCI2yxE=,tag:efsMWM0evi1p7ias4W5MSg==,type:str]
 stringData:
-    apiKey: ENC[AES256_GCM,data:ZDZs7/mTZsOEhJNFFN/svLle+ZdNwZjVZ5iB6oW2nyHLmnj+vXDs3EVe/TrgQsVXBZP3+2XsihhCCKjmelfc4q59hXWSwRlaBIjLBsXQXI9uPB5N3GgkgLvus8o8QFsby5OHTyyqDOkVvwkYUV/877jIPcUvHsIMZN/GQyWbudNC7HcmWw+K7BXZyPnqyMx/PV//JWePccvnPH2QXoURygqscx4=,iv:2hYx5GZwxfWMXuOT8co4H4JzBG51bVBo7hiMFKeLn5g=,tag:oIA90W031hfpFGmeLstX6Q==,type:str]
+    apiKey: ENC[AES256_GCM,data:2QQlGv4W0n4HX/Y8BVzcCiws+Bt3zBIjsq7+rx0TdCGpVAgOOMrKt4sQLAq4Tl/CYRE27zuB4lLfDaOQMqzqaPlIScxA5d45MLKbYad99OwNPCRfbAxfE2Na1k2covXRCl47+iT5aTbUnMvlZGhyt5jEOl+sWnj29dBrpgvFpDtgvN+z0iLmL+k23uRwTOcVKw6C5e1c9PKB+FNKGp2NwGX83h8=,iv:JSE8fiY6RryXguCS0LMX1Xn42MZ1RTWqpU2rEm9t8wc=,tag:mBd8EX0Kkpmz7TeO5O+ZZA==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-07-25T20:01:05Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE8diCNDuaXfMRo5Nlp89+FAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM9m/Du/qSncWQiEG+AgEQgDsiDGVSaTl2onGNx8+3l+1TLB20vMQvh4VoS2z/J0i6Un3sj8FKrrZvWQjQgDb0xXqav48l+kKP+iUTbw==
+          created_at: "2025-10-30T19:46:39Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE0Yino5bHC7TtmtV3wHHUGAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM36A8dkzWc1M2KA7dAgEQgDu5+R/xPN7Z66kInT/xVMSSZIUQguzvR4WzzMuqt6kO+XbOXSrQp1ZSq20YQD0o7sZKDRuhWDC/7mrgJA==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-07-25T20:01:06Z"
-    mac: ENC[AES256_GCM,data:asNvOkxqtCQ4ptytpCZQtYvdEb+AYEADoNLkvNE2SWDR1SZheCpP4Uk3g3UHN0aELN2Xi7j2aES0F4KNYTDchOqyspovgFjW+gpMoELsinIL8htrfEh7h8mJmqdCFf0aDFEl8Tl0lnbl/N18vGslMOrKB5EcMDTdbgBan6HvgMw=,iv:KNxmKl7Xe9plUy1AMf8j2wXjhvMXnSZlExab1MFHLw8=,tag:D8o/j/9xF87Sdrjw1gx3BA==,type:str]
+    lastmodified: "2025-10-30T19:46:40Z"
+    mac: ENC[AES256_GCM,data:maXxrykOAdHYK1/EbFBZAM4AHyrZAMiH05YbS0zsJCWSQd4tUF+oQoShASVTXAlWVjp9RlMzizbR/+H0fGZ03KBp358Oecotkl0n1yJi6vstH2wRXWnVRFGQ8FK6TLF3KqYrrApfenBRAYyA50w2souLjZvs5bnxo8jgsVhKEXU=,iv:VgGncIxLFvzyJ9Z/sYiku2irEtyR+hwE0bJAAtrcv+A=,tag:cD5dv+cPoN4xnrdNO6GjQQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
