--- a/platform/ai/k8s/llm-providers/openai/kustomization.yaml
+++ b/platform/ai/k8s/llm-providers/openai/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - backend.yaml
-  - models/gpt-4.5.yaml
+  - models/gpt-4o-mini.yaml
 
 generators:
   - secrets-generator.yaml
