fix cloudflare tunnel

--- a/kubernetes/apps/secrets/cloudflare.enc.yaml
+++ b/kubernetes/apps/secrets/cloudflare.enc.yaml
@@ -1,25 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:VcE=,iv:i9O9Ph5dqleQh3FHOXp42NxhrQEM3xJ9kUIWBTJbX6w=,tag:WiHpYYby592ZTBAgyt9Iyw==,type:str]
-kind: ENC[AES256_GCM,data:e8IkRcV/,iv:WPrW9iR7fkT2A0p3rnyBhbOuWvkHf+F4RAIHp3dtghU=,tag:umoKaIEyM2DTIY/Nq+dj9A==,type:str]
+apiVersion: ENC[AES256_GCM,data:uuI=,iv:7GTzRf9/GROB7eQnviuMMGSKH9Vl3kLGflaOa6Caa5w=,tag:gTyWtU66BQxgTmXgOZ6vYQ==,type:str]
+kind: ENC[AES256_GCM,data:5EZZMDuw,iv:nNiV6OEv6nQ/eFIY2PqdiwQ9fok0jP7TOjThf9tvmqs=,tag:CTSpjZXm9mcFYW7Ni6PrAg==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:LT+3mV3IVyBdFRbi7qrGBE0P9/GwQns=,iv:rVbou7kVloGIJNIzXkRfXJe4v4Ej8VSzXkzDrnnaB8w=,tag:A5cA9qhWoc1R3GrbyOzNVA==,type:str]
+    name: ENC[AES256_GCM,data:VDD4hlo2OxL/LHEke0VBPP2CHtoqsoE=,iv:VvllJ4NBqUieXDrB46i3jlNxYawNkUvJJEP0nQCce94=,tag:qpsUAdupgNkSdYp/8PanVg==,type:str]
+    namespace: ENC[AES256_GCM,data:BQu983ydmYrHdD5A,iv:KPYnJOPrD8ch1+jb2mjrePHBRvQzAxmA4p9JcchvMjo=,tag:eqDbaW7Mv00ZLuzCPgfU1g==,type:str]
     annotations:
-        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:dyYgCw==,iv:lWzzwrYgsvzqH7syvukmyf2hHHgS6YAZ/LswMrlx9Bw=,tag:JXP+5b0CzLGe+yr0nJpVNA==,type:str]
-        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:yUh3nw==,iv:MDQpC83ZFc2oPSYMxox0yoY/jtsDWcHrgeAhBKwdPPk=,tag:LqU82WparXcxqFyJ1H9QQw==,type:str]
-type: ENC[AES256_GCM,data:tK0PbN3e,iv:aq9AVWUpUUiivzy4O46zvJy/JA7XaoGxda4C+FxcB4w=,tag:OjxIuSKEQgXkVGJ9vjNTRw==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:iNpPtQ==,iv:LmOjgSm/Y5FBqqDBOdl/96m8GRT1lXbwuczJzLRME3A=,tag:Y9DrYldk6YPffsrUhXRNSA==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:SluH0A==,iv:Ht8lH7q0XwWgDDoAYewhyj9twrBZPwOBk628I34czJ0=,tag:oRa3JTdVq5nVrt9c/kGdMw==,type:str]
+type: ENC[AES256_GCM,data:f3HwSkUd,iv:7Zt2NmQnhKR/QbqiTcxLUW4a05bC3of86tux3sjzc2g=,tag:+cp9RHw948dfZZpLFniInQ==,type:str]
 data:
-    CLOUDFARE_API_TOKEN: ENC[AES256_GCM,data:Q89Uz1Vt6mcRNGv+BBUehBXVj3Q0rDl8OGYow+kBhKq5rwnKjptF5YTBT+uamaR/aF+oh2jlf+k=,iv:AbM9/yPfBge8oRKdI6w+NV2vGSFR5ilAiEYKmx3m+9U=,tag:6yKb6O2knanG3thhEdZyRA==,type:str]
+    CLOUDFLARE_API_TOKEN: ENC[AES256_GCM,data:cARVBMGNAHOgVRnS5GqIA3A2/nf7+Zo2dN1A1HDexMynbfSpzbiZxMUwsZ/hVIIaxWNVBDMRRB8=,iv:WLrsqkjcgTk9zZKdMkido5ca8prfos4sZcklmq0kzCM=,tag:LrKphGDLcYL26md/r0j87w==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-06-27T18:48:54Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE1KtwB3v2PKUWQA/BGA1q1AAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQM5bBMyX0wTnFOuNelAgEQgDtFaq95k+KNwRb3PSx38m2FkYq92d/hYJKa/k9hpuJHFnoMiBMWgU4runwjyeVZoav1+m1yuzBpXXpIow==
+          created_at: "2025-11-04T22:43:14Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAHtAS48Z5cS16f8ooa6WadHAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQML2PwNKF+3N1orNzRAgEQgDtew+Qo9uFZfTTT0iFQpPToF2UZJMkqHeCMEUcAGYEzBgAFJfS3HuoDn3GQXcTPJk/6VhYOcDhgl/6mQQ==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-06-27T18:48:54Z"
-    mac: ENC[AES256_GCM,data:LLbpyjPN9FV+mGqovi7pkX4busg3tZtxZTwniMDU7QSLK4K2jaRal5gsFVF1OyR4f9Hwm7BlOykicB6UC++H1Co75YjEmOukIu5k/jQmoajzCDNE917VE7brNl1c368v48l0CInPbkciK/cIefTZm7kvEzUlIgwFy3L1g3XiT4E=,iv:FkMXouxuJgLx8U1xPsppaRBRAU05hJqkY4bj0G+/TDs=,tag:jmYwEGFGgM+jFtVGitfOtw==,type:str]
+    lastmodified: "2025-11-04T22:43:14Z"
+    mac: ENC[AES256_GCM,data:a0mcfLeS835iitqBDkOJDPi6HazVQFEmSd9TBPUVbtoHqddYdvt+rm7rfMhUYnC45EQMbgI+ZXgp/IfD8p7IbKRBxN2sOf7riXeqIYXgoh7heT+d/oiKo0t6Y3gmj0wENIbNJNaAu+EMo9xvuMtCCxa+r3c7Mcsc1zVcE2vjgM8=,iv:3m74OLczzxyZsEQ5AWsGUnmMkWJHi2keIVJBbSAAObQ=,tag:/+85NJzolLUsI0s9EisJ3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
