--- a/platform/automation/k8s/n8n/secrets.enc.yaml
+++ b/platform/automation/k8s/n8n/secrets.enc.yaml
@@ -1,27 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:Ysc=,iv:nX+umHcqUpETYNP/CPM+xTzVH/I/AsyBxNQE+KroJO4=,tag:NGcWWBKSmZcoW0jwXiY31Q==,type:str]
-kind: ENC[AES256_GCM,data:hK0Jv9yt,iv:AX9h2FtwPDBgKBcJbedR3/R/JC0Usx56UTrcAfD7TJE=,tag:lYDPkHDX6Af6oX/tKDBHFA==,type:str]
+apiVersion: ENC[AES256_GCM,data:lKQ=,iv:Y8KUPYFywjCg1k2HQLLhEqivFTh4MeLX1XzqlU/RUOg=,tag:LqOCJKJ7qPzIKw7OgBGzBA==,type:str]
+kind: ENC[AES256_GCM,data:2dzUZzm6,iv:lXmv3WNeIiI4gp9Zq6AL5Y/94P7fDOM4rIbbh7w5EzE=,tag:TAN8I8O3mW9ovCTRLpQooA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:H4GJPzzQSu6c1Ko=,iv:6iyC3E4s2EBgT7Zihz0f8YWHg+e8qETL2szynXciqL0=,tag:JLXA/pGzz1vrouir9ZnTvQ==,type:str]
-    namespace: ENC[AES256_GCM,data:1tpqv1t6wjw5sg==,iv:CTGPri2RrAwhk7i2qzEqXCsbZfiE7mBblR9R/CepX8U=,tag:q+9Sohv5/oZyMlP4MbBJ9A==,type:str]
-type: ENC[AES256_GCM,data:z8+fhjwi,iv:RlxS0mQK8GN8nUFd5fbWyZWh4Nwg6sCUPQtON1kAHDM=,tag:PEAPN49eo9oSpCjzwMDjzQ==,type:str]
+    name: ENC[AES256_GCM,data:uunvq9w/8LhHZBU=,iv:qwp/RqoPaNlQiOhBhrodnzOdCZF0p1bYfqyqn6TqEx4=,tag:h8ovkdGUd2q7cmbvWY31AQ==,type:str]
+    namespace: ENC[AES256_GCM,data:tyv7+sIKBn9AEQ==,iv:ZjqZH3NrmoFTYVKVEoRttGGN9RdNNFomxwg0Gva6ypM=,tag:HPzsmBncysa/gdcpXQOwTg==,type:str]
+type: ENC[AES256_GCM,data:g935WE6H,iv:UzXD4reX4DfFNssQMPLe3hkaBwnQxwth4PCzUADwIbQ=,tag:ujno9VGR0g3y1AoiNmoy1w==,type:str]
 data:
-    #ENC[AES256_GCM,data:7W0lHua36FlNlkiDKSq5wjmdCu7/JiYfeCc=,iv:SjcREAnF0+FyzIoY/N02EO+6Rp2OPYzD8ouV9tqHSoo=,tag:zNyh1CTwyhnewzmkmgtMVA==,type:comment]
-    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:NtzytcQVTLEOT1UsDSREjA/3l6Oh2MWi,iv:2ZdD3ncgA7hZQrGZfWbUOFBKoSw8MdJoROxS2ji5AKQ=,tag:7ydFNwuFNwUc/jcg65U8Gw==,type:str]
-    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:Lpl4MV4S8jmPFrpOlBHe+0Or4QgnRjkM,iv:a8JTOoXvHX5zJWrRhfoG7GbyGrbfj4ksfkxmtiEyNPs=,tag:AKyrYC5iuDMPffRpH3z7bw==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:hUrnQGNJ1k0ffc8I2rfe9HhNRrDzR7+Z,iv:x1ggTmmOGmBLu09q2ur4aA9xzY/3MB+oajVvNaGc6qs=,tag:WM5Bp/7kjhzA172Wu2kqTQ==,type:str]
-    CLOUDFARE_API_TOKEN: ENC[AES256_GCM,data:OX5HjVtzR0QTExqGcm75RiWXsklAnfqPdKOck3sUKpeEaEbySWxGbWeMozkGzIkBrI3SvDVOuPM=,iv:3xFZqvNoANwm17Ln198dlilBxl1mI5c9wK72yvV0XIQ=,tag:PGa1OLx94+0itB3vH+hxsg==,type:str]
+    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:sOlnSkwqUN8iYQq0XFrcMoc8vx4e5JD2,iv:jYwh3y0/CMHrmI3CGZxiP6QkbQ31Eq9A66sAzNbN/A4=,tag:/70OKBQ6iqnynD/2q3dtMg==,type:str]
+    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:XY/9G6KcSwwyQ4MWJ90ZNcwnNp3nWRsb,iv:5Nuq2Qxg2ZJTipUDmQ+tYQKAFEfw+IVv3PusJSgW/+Y=,tag:KGAUVX5Z65dtkVh7iTSCnw==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:5D0KyPE4byURymnqnUNLXgJqdv4R94YO,iv:a4tvSYb6XLPA2NY44YJHyKE58ugGaLOM2mWyZWZWsGQ=,tag:3bIQK2Lv4Xj1o/4VX1Ec1A==,type:str]
+    CLOUDFLARE_API_TOKEN: ENC[AES256_GCM,data:FfGZws9FoWV5PqYoDc7n6GNebnfZ/1SmEV1vIoUlSLkgLmgW5esbbMhU9r5MmK6I6kyGyGEGdOQ=,iv:QnSTuCuPCD/6/ItVPFWA5SfSTkUUpLELjGCpC6UxFcE=,tag:RI9OgFN+fyjUgEQbWuNkuA==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-06-24T20:16:23Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAG5AhMTAHuEfBE4xHfAzcdzAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMqTs/X/D3mVSHznSDAgEQgDssxQRfkMjsDnDVCjWt+NuGHZwa64gGmFXGhgRtRV80z3rbJdVWXi2PwtjR+6wfSSgB13cQy1/+nxxkEg==
+          created_at: "2025-11-04T21:56:16Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAE9yXaukgxIaJNezJr++PXqAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMLZ8rkyeDRYEYEFkQAgEQgDv7ms0MAaPWv2D/s8Ku2Vb9peSqW3GpsOVHX7g+9K/i6x2E0hkA3cLDx8FmZJDymoZXS0pcm4Y1oR0nrw==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-06-24T20:16:24Z"
-    mac: ENC[AES256_GCM,data:YFnob0ycnwvUBVtlpqpNa1OA6liuCuf9RBIB8EKJ+CyJtz+AlIegcseWZwH9M2ueOHBsZRtdznwGvd8xgTb5H/QgEdX5Bd2Yofbna0+61ILZiFOV7zamXb8Uu+5R8I1v+LYgL/yin4+ibpPrkxtmnEvirZVpdyLTwOPu4xau0ms=,iv:LIxC18nDRHfH4aB5RQth6CweYS/J+oYDSXEzY+PKt1w=,tag:Qb41ydZc/hZdNB1eSgSW6Q==,type:str]
+    lastmodified: "2025-11-04T21:56:16Z"
+    mac: ENC[AES256_GCM,data:b7zRSAkGHextkLeIU9Fhs6U6AJ14BMoxA7x+2jrbEYry00OugL0Y1hdkTuxXKRQ5HevtVYbpK7ryOnJmaoFu4mgfszVxwh1ZHjZHDlbgwKBzpPba/2v3xIarXzSdnU8DHXFLefzoMOl6oDdrsg1kmpFvYpeO5Qa8w1mHOWhMQAs=,iv:WwORoq/9OVQP0lzYeHYoVXrn6zBaJNBc9UbFPSpPCpI=,tag:HTQWpZrqZqq72u7pVmAFvw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
