--- a/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/external-gateway.yaml
@@ -12,7 +12,7 @@ spec:
     - name: https
       protocol: HTTPS
       port: 443
-      hostname: "external.{{ .Values.external.domain }}"
+      hostname: "homelab.external"
       tls:
         mode: Terminate
         certificateRefs:
