--- a/kubernetes/apps/secrets/cloudflare.enc.yaml
+++ b/kubernetes/apps/secrets/cloudflare.enc.yaml
@@ -1,26 +1,26 @@
-apiVersion: ENC[AES256_GCM,data:uuI=,iv:7GTzRf9/GROB7eQnviuMMGSKH9Vl3kLGflaOa6Caa5w=,tag:gTyWtU66BQxgTmXgOZ6vYQ==,type:str]
-kind: ENC[AES256_GCM,data:5EZZMDuw,iv:nNiV6OEv6nQ/eFIY2PqdiwQ9fok0jP7TOjThf9tvmqs=,tag:CTSpjZXm9mcFYW7Ni6PrAg==,type:str]
+apiVersion: ENC[AES256_GCM,data:uMQ=,iv:wWSur0C/vbQah9Lc2yvTEw6nupVa3fPVfY4YEIX1Pco=,tag:2B3KBY24NdgoLpI3ip/FtQ==,type:str]
+kind: ENC[AES256_GCM,data:Ij+XAOom,iv:/edjBDMHOV9XdZyA0A7Q6RlMhwDu91/DY/0a91x6etU=,tag:vKp8Wbx/9pRxQOWQ+fpmJA==,type:str]
 metadata:
-    name: ENC[AES256_GCM,data:VDD4hlo2OxL/LHEke0VBPP2CHtoqsoE=,iv:VvllJ4NBqUieXDrB46i3jlNxYawNkUvJJEP0nQCce94=,tag:qpsUAdupgNkSdYp/8PanVg==,type:str]
-    namespace: ENC[AES256_GCM,data:BQu983ydmYrHdD5A,iv:KPYnJOPrD8ch1+jb2mjrePHBRvQzAxmA4p9JcchvMjo=,tag:eqDbaW7Mv00ZLuzCPgfU1g==,type:str]
+    name: ENC[AES256_GCM,data:OeiMDAViQJRxaFxNgl1QvQfEIUxDxgg=,iv:qwy3OqcP9wU9v7RS/U1ptHlTUu7+kJas9MdUVBxhb0k=,tag:lTKh5Qn36okzX1wyRiBCwg==,type:str]
+    namespace: ENC[AES256_GCM,data:SEsg9IER5ss1GGS+,iv:lHhv7/whRjJRw7KG05jBgAlAR+EyScxlpHYNzkEsTOU=,tag:o9fus4NHH6p52MBg1tq0cQ==,type:str]
     annotations:
-        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:iNpPtQ==,iv:LmOjgSm/Y5FBqqDBOdl/96m8GRT1lXbwuczJzLRME3A=,tag:Y9DrYldk6YPffsrUhXRNSA==,type:str]
-        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:SluH0A==,iv:Ht8lH7q0XwWgDDoAYewhyj9twrBZPwOBk628I34czJ0=,tag:oRa3JTdVq5nVrt9c/kGdMw==,type:str]
-type: ENC[AES256_GCM,data:f3HwSkUd,iv:7Zt2NmQnhKR/QbqiTcxLUW4a05bC3of86tux3sjzc2g=,tag:+cp9RHw948dfZZpLFniInQ==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-enabled: ENC[AES256_GCM,data:aCIuJg==,iv:Iry1JnFHDIR/Voc5yDErow4pi3xfZnU7gi8Nnld9WrU=,tag:Tbml+UqzYrhF1pz3Ryz6uA==,type:str]
+        reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: ENC[AES256_GCM,data:WkraBg==,iv:21nJUJkEj2BUfHIHkINbHKEePUT+t4vd+adBrusTH+c=,tag:QSHydOtRgzxUQPnWyElsbw==,type:str]
+type: ENC[AES256_GCM,data:7QAbA7cS,iv:RABoGTurAt4AMDVEIGyqgmmR3CE8e29DvGVGgn0ordw=,tag:a/wHMakLuTM4Ik+00kOfWg==,type:str]
 data:
-    CLOUDFLARE_API_TOKEN: ENC[AES256_GCM,data:cARVBMGNAHOgVRnS5GqIA3A2/nf7+Zo2dN1A1HDexMynbfSpzbiZxMUwsZ/hVIIaxWNVBDMRRB8=,iv:WLrsqkjcgTk9zZKdMkido5ca8prfos4sZcklmq0kzCM=,tag:LrKphGDLcYL26md/r0j87w==,type:str]
+    CLOUDFLARE_API_TOKEN: ENC[AES256_GCM,data:y5dJAnQnZroZCFmcaWmpPRc8itqheZH3C9zAtyQwaNPFP5whC06fYQUbU6yDblfQOAD6quuQaII=,iv:iCKt/sZo+WmCvvqDLTJBIi5tTOWZGO+/dsGB5wtyeLg=,tag:PjXlbG4PA/x+9sgU9Zq0GA==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-11-04T22:43:14Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAHtAS48Z5cS16f8ooa6WadHAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQML2PwNKF+3N1orNzRAgEQgDtew+Qo9uFZfTTT0iFQpPToF2UZJMkqHeCMEUcAGYEzBgAFJfS3HuoDn3GQXcTPJk/6VhYOcDhgl/6mQQ==
+          created_at: "2025-11-06T22:20:52Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAGL+9qgd0BUuBn3KegKzu8TAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMfmH221XwxxuYei67AgEQgDtyeEeXSqzpfsMIBJ9rzcysu3BpUJWSQS0i51AiF6PtN2dtg4GaFs4xmm0lfiARe7SOid5dcJmOSym7jg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-11-04T22:43:14Z"
-    mac: ENC[AES256_GCM,data:a0mcfLeS835iitqBDkOJDPi6HazVQFEmSd9TBPUVbtoHqddYdvt+rm7rfMhUYnC45EQMbgI+ZXgp/IfD8p7IbKRBxN2sOf7riXeqIYXgoh7heT+d/oiKo0t6Y3gmj0wENIbNJNaAu+EMo9xvuMtCCxa+r3c7Mcsc1zVcE2vjgM8=,iv:3m74OLczzxyZsEQ5AWsGUnmMkWJHi2keIVJBbSAAObQ=,tag:/+85NJzolLUsI0s9EisJ3A==,type:str]
+    lastmodified: "2025-11-06T22:20:53Z"
+    mac: ENC[AES256_GCM,data:89noPLN1zX+BNsQevQCd/n4OxmCs6VxmyVYmJ50COdFRwh26G4PVWNdeQrbDCd5mFjOU7lPPMKXkGzQa9+fs60C00xP1B1+WbV/MGuqEI5kVvb8VhQzYUza9KMkrX4BjC4tufVzJ0brTkOrylGGHe+q+RHrCoRhdLXaJEhnbvV4=,iv:BIju7zd9v2v83Y2eG/O+U7gSM/0SBi75hGkZZ+4mCPk=,tag:sH0hzSVc/JP16ap+Nn7tqw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData|apiVersion|metadata|kind|type)$
     version: 3.8.1
