--- a/kubernetes/apps/security/cert-manager/cloudflare-issuer.yaml
+++ b/kubernetes/apps/security/cert-manager/cloudflare-issuer.yaml
@@ -3,7 +3,6 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: cloudflare-dns-issuer
-  namespace: cert-manager
 spec:
   acme:
     email: ${EMAIL}
@@ -17,3 +16,5 @@ spec:
             apiTokenSecretRef:
               name: cloudflare-token-secret
               key: CLOUDFLARE_API_TOKEN
+        # selector:
+        #   dnsZones: ["${CLOUDFLARE_DOMAIN}"]
