--- a/kubernetes/charts/homelab-gateway/templates/external-certificate.yaml
+++ b/kubernetes/charts/homelab-gateway/templates/external-certificate.yaml
@@ -5,11 +5,11 @@ metadata:
   name: external-certificate
   namespace: kube-system
 spec:
-  secretName: external-cloudflare-dns-key
+  secretName: cloudflare-dns-key
   duration: 2160h
   renewBefore: 360h
   dnsNames:
-    - "external.{{ .Values.external.domain }}"
+    - homelab.external
   issuerRef:
     name: cloudflare-dns-issuer
     kind: ClusterIssuer
